# ezsyslog

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dockerfile  redis.conf
app/: index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
app/src/: App.tsx  global.less  index.tsx
app/src/components/: canvasGraph.tsx  dropdown.tsx  syslogTable.tsx  useApi.tsx  useLocalStore.tsx
app/src/lib/: SyslogTable.svelte
app/src/pages/: dashboard.tsx
app/src/routes/: __layout.svelte  index.svelte  test.svelte
src/: database.rs  http.rs  main.rs  netconsole.rs  syslog.rs  utils.rs
test/: init_index.txt  syslog_examples.sh
