[package]
name = "ezsyslog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ctrlc = "3.2.2"
futures-util = "0.3.21"
hex = "0.4.3"
mime_guess = "2.0.4"
poem = { version = "1.3.35", features = ["server", "embed", "anyhow", "sse"] }
redis = "0.21.5"
redis-graph = { version = "0.4.2", features = ['tokio-comp'] }
rust-embed = { version = "6.4.0" }
serde = "1.0.139"
serde-redis = "0.12.0"
serde_json = "1.0.82"
syslog_loose = "0.17.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.9"
